--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/static/CSS/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="/CSS/bootstrap.css" type="text/css">
   </head>
   <body>
         <div class="container">
@@ -39,16 +39,20 @@
                 </div>
                 <div class="card">
                     <div class="card-header">
-                        文件上传
+                        教务处帐号
                     </div>
                     <div class="card-body">
-                        <form action="/" method="post" enctype="multipart/form-data">
+                        <form action="" method="post" novalidate>
                             {{ form.hidden_tag() }}
-                            {{ form.doc }}
-                            {% for error in form.doc.errors %}
-                                <span style="color: red;">{{ error }}</span>
-                            {% endfor %}
-                            {{ form.submit }}
+                            <div class="form-group">
+                               {{ form.user.label }}
+                               {{ form.user(class="form-control") }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.password.label }}
+                               {{ form.password(class="form-control") }}
+                            </div>
+                           {{ form.submit(class="btn btn-primary") }}
                         </form>
                     </div>
                 </div><br>
@@ -73,8 +77,8 @@
         </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="/static/JS/jquery-3.4.1.js" type="text/javascript"></script>
-    <script src="/static/JS/popper.min.js" type="text/javascript"></script>
-    <script src="/static/JS/bootstrap.js" type="text/javascript"></script>
+    <script src="/JS/jquery-3.4.1.js" type="text/javascript"></script>
+    <script src="/JS/popper.min.js" type="text/javascript"></script>
+    <script src="/JS/bootstrap.js" type="text/javascript"></script>
   </body>
 </html>
