--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,11 +7,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/CSS/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="../static/CSS/bootstrap.css" type="text/css">
   </head>
   <body>
         <div class="container">
             <div class="col-6">
+                {% for message in get_flashed_messages() %}
+                <div class="alert alert-info">
+                    <button type="button" class="close" data-dismiss="alert">&times;</button>
+                    {{ message }}
+                </div>
+                {% endfor %}
+                 <div class="card">
+                    <div class="card-header">
+                        教务处帐号
+                    </div>
+                    <div class="card-body">
+                        <form action="" method="post" novalidate>
+                            {{ form.hidden_tag() }}
+                            <div class="form-group">
+                               {{ form.user.label }}
+                               {{ form.user(class="form-control") }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.password.label }}
+                               {{ form.password(class="form-control") }}
+                            </div>
+                           {{ form.submit(class="btn btn-primary") }}
+                        </form>
+                    </div>
+                </div>
                 <div class="card">
                     <div class="card-header">
                         说明
@@ -37,25 +62,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="card-header">
-                        教务处帐号
-                    </div>
-                    <div class="card-body">
-                        <form action="" method="post" novalidate>
-                            {{ form.hidden_tag() }}
-                            <div class="form-group">
-                               {{ form.user.label }}
-                               {{ form.user(class="form-control") }}
-                            </div>
-                            <div class="form-group">
-                                {{ form.password.label }}
-                               {{ form.password(class="form-control") }}
-                            </div>
-                           {{ form.submit(class="btn btn-primary") }}
-                        </form>
-                    </div>
-                </div><br>
+               <br>
                 <div class="card">
                     <div class="card-header">
                       ics的妙用
@@ -77,8 +84,8 @@
         </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="/JS/jquery-3.4.1.js" type="text/javascript"></script>
-    <script src="/JS/popper.min.js" type="text/javascript"></script>
-    <script src="/JS/bootstrap.js" type="text/javascript"></script>
+    <script src="../static/JS/jquery-3.4.1.js" type="text/javascript"></script>
+    <script src="../static/JS/popper.min.js" type="text/javascript"></script>
+    <script src="../static/JS/bootstrap.js" type="text/javascript"></script>
   </body>
 </html>
